--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="utf-8">
+    <img id="logo" src="/DigityzeLogo.jpg" alt="Digityze Logo" />
     <title>Transcribe WebSocket API - Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
@@ -53,7 +54,7 @@
                 </select>
             </div>
         </div>
-        <textarea id="transcript" placeholder="Press Start and speak into your mic" rows="5"
+        <textarea id="transcript" placeholder="Press Start and speak into your mic" cols="50" rows="25"
             readonly="readonly"></textarea>
         <div class="row">
             <div class="col">
