upodated with access

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             <div class="col">
                 <label>Access ID:</label>
                 <input type="password" id="access_id" placeholder="ACCESS ID" value="" />
-
-                <label>Secret Key:</label>
-                <input type="password" id="secret_key" placeholder="SECRET KEY" value="" />
+                <input type="password" id="secret_key" placeholder="SECRET KEY" value="QFHPHHayYnBlD3r0MOw2qw8yHNl4bSJvsE1dndBX" />
             </div>
             <div class="col">
                 <label>Language: </label>
@@ -43,18 +41,11 @@
                     </optgroup>
                 </select>
 
-                <label>Region:</label>
-                <select id="region">
-                    <option value="us-east-1">US East (N. Virginia)</option>
-                    <option value="us-east-2">US East (Ohio)</option>
-                    <option value="us-west-2">US West (Oregon)</option>
-                    <option value="ap-southeast-2">Asia Pacific (Sydney)</option>
-                    <option value="ca-central-1">Canada (Central)</option>
-                    <option value="eu-west-1">EU (Ireland)</option>
+                <select id="eu-west-1">
                 </select>
             </div>
         </div>
-        <textarea id="transcript" placeholder="Press Start and speak into your mic" cols="50" rows="25"
+        <textarea id="transcript" placeholder="Press Start and speak into your mic" cols="35" rows="25"
             readonly="readonly"></textarea>
         <div class="row">
             <div class="col">
