updated with shit

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                     </optgroup>
                 </select>
 
-                <select id="eu-west-1">
-                </select>
+                <select Region="eu-west-1"> </select>
             </div>
         </div>
         <textarea id="transcript" placeholder="Press Start and speak into your mic" cols="35" rows="40"
