--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col">
                 <label>Access ID:</label>
                 <input type="password" id="access_id" placeholder="ACCESS ID" value="" />
-                <id="secret_key" placeholder="SECRET KEY" value="QFHPHHayYnBlD3r0MOw2qw8yHNl4bSJvsE1dndBX" />
+                <id="secret_key" placeholder="SECRET KEY" value="KqKOm+5LavlqBMPX0ouowUZuT6qThN1tbekEWWz3" />
             </div>
             <div class="col">
                 <label>Language: </label>
@@ -39,12 +39,18 @@
                     <optgroup label="Spanish">
                         <option value="es-US">US Spanish (es-US)</option>
                     </optgroup>
-                </select>
-
-                <select Region="eu-west-1"> </select>
+                    <label>Region:</label>
+                    <select id="region">
+                        <option value="us-east-1">US East (N. Virginia)</option>
+                        <option value="us-east-2">US East (Ohio)</option>
+                        <option value="us-west-2">US West (Oregon)</option>
+                        <option value="ap-southeast-2">Asia Pacific (Sydney)</option>
+                        <option value="ca-central-1">Canada (Central)</option>
+                        <option value="eu-west-1">EU (Ireland)</option>
+                    </select>
             </div>
         </div>
-        <textarea id="transcript" placeholder="Press Start and speak into your mic" cols="35" rows="40"
+        <textarea id="transcript" placeholder="Press Start and speak into your mic" cols="40" rows="25"
             readonly="readonly"></textarea>
         <div class="row">
             <div class="col">
