--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <optgroup label="Spanish">
                         <option value="es-US">US Spanish (es-US)</option>
                     </optgroup>
+                <div class="col">
                     <label>Region:</label>
                     <select id="region">
                         <option value="us-east-1">US East (N. Virginia)</option>
@@ -48,6 +49,7 @@
                         <option value="ca-central-1">Canada (Central)</option>
                         <option value="eu-west-1">EU (Ireland)</option>
                     </select>
+                    </div>
             </div>
         </div>
         <textarea id="transcript" placeholder="Press Start and speak into your mic" cols="40" rows="25"
